# Talentmatch-Sistema-de-Vagas

./: .gitignore  .replit  README.md  REORGANIZACAO_CONCLUIDA.md  db.sqlite3  pyproject.toml  replit.md  requirements.txt
attached_assets/: content-1764022082887.md
core/: admin.py  context_processors.py  forms.py  matching.py  models.py  signals.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_notificacao.py  0003_mensagem_match_candidatura.py
projetotcc/core/: urls.py  views.py
projetotcc/talentmatch_project/: settings.py
projetotcc/templates/: base.html  cadastro.html  candidaturas_vagas.html  cursos.html  dashboard_empresa.html  landing.html  login.html  mensagens.html  perfil_candidato.html
static/css/: styles.css
talentmatch_project/: settings.py  urls.py  wsgi.py
temp_repo/: .replit  CONFIGURACAO_CHAT_IA.md  replit.md
temp_repo/attached_assets/: Pasted-Replit-AI-Prompt-Continue-tasks-Fix-registration-form-Django-PostgreSQL-Continue-working-on-1764007025304_1764007025305.txt
temp_repo/core/: views.py
templates/: base.html  cadastrar_vaga.html  cadastro.html  cadastro_empresa.html  conf.html  config_admin.html  configurações.html  confirmar_deletar_vaga.html  dashboard_admin.html  dashboard_candidato.html  dashboard_empresa.html  editar_perfil_candidato.html  editar_perfil_empresa.html  editar_vaga.html  explorar_vagas.html  gerenciar_empresas.html  gerenciar_vagas.html  landing.html  login.html  mensagens.html  painel_denuncias.html  perfil_candidato.html  relatorios.html  relatórios.html  sair.html
templates/auth/: cadastro.html  (+2 more)
(+24 files in other folders)
