[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.8",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "dj-database-url>=2.3.0",
    "openai>=1.58.1",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
]
